# rmsg

./: .gitignore  Cargo.toml  LICENSE  README.ko.md  README.md
.github/workflows/: ci.yml  release.yml
npm/: install.js  package.json
src/: app.rs  cli.rs  crypto.rs  main.rs  p2p.rs  protocol.rs  session.rs  storage.rs  tui.rs
